# Multithread_algo

./: CMakeLists.txt  README.md
include/: accumulate.hpp  for_each.hpp  necessary_libs.hpp  neutralElem.hpp  sort.hpp
src/: main.cpp
